{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 57,
  "lineage": "3c6276c9-a644-421e-7099-707cb8e6258f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df369c75ed5eecc5",
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:elastic-ip/eipalloc-0df369c75ed5eecc5",
            "association_id": "eipassoc-0546ade4e75c1df05",
            "domain": "vpc",
            "id": "eipalloc-0df369c75ed5eecc5",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0270e1fab08d9ec9d",
            "private_dns": "ip-10-0-0-55.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.55",
            "public_dns": "ec2-13-112-153-171.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.112.153.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "konnichiwa-nat-eip-1"
            },
            "tags_all": {
              "Name": "konnichiwa-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da11ebf64e9b316f",
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:elastic-ip/eipalloc-0da11ebf64e9b316f",
            "association_id": "eipassoc-0c208c96c5c98f058",
            "domain": "vpc",
            "id": "eipalloc-0da11ebf64e9b316f",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01dadb3a205feba53",
            "private_dns": "ip-10-0-1-245.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.245",
            "public_dns": "ec2-3-113-103-15.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.113.103.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "konnichiwa-nat-eip-2"
            },
            "tags_all": {
              "Name": "konnichiwa-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:internet-gateway/igw-0ed569aab29ce837a",
            "id": "igw-0ed569aab29ce837a",
            "owner_id": "565106043526",
            "tags": {
              "Name": "konnichiwa-igw"
            },
            "tags_all": {
              "Name": "konnichiwa-igw"
            },
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:loadbalancer/app/main-lb/859358dd7920ea54",
            "arn_suffix": "app/main-lb/859358dd7920ea54",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-lb-1913186508.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:loadbalancer/app/main-lb/859358dd7920ea54",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0263f436182535c00"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086d9b680119341fa"
              },
              {
                "subnet_id": "subnet-0abf666fe281b3336"
              }
            ],
            "subnets": [
              "subnet-086d9b680119341fa",
              "subnet-0abf666fe281b3336"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0b8ce645f2f86e0ce",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:listener/app/main-lb/859358dd7920ea54/832a34113c8f218c",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:565106043526:certificate/d8a4dc80-129a-498f-9b0b-662aa78052c2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:targetgroup/tf-example-lb-tg/09c7f99ba1cfd3d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:listener/app/main-lb/859358dd7920ea54/832a34113c8f218c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:loadbalancer/app/main-lb/859358dd7920ea54",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:targetgroup/tf-example-lb-tg/09c7f99ba1cfd3d0",
            "arn_suffix": "targetgroup/tf-example-lb-tg/09c7f99ba1cfd3d0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:targetgroup/tf-example-lb-tg/09c7f99ba1cfd3d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:565106043526:loadbalancer/app/main-lb/859358dd7920ea54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df369c75ed5eecc5",
            "association_id": "eipassoc-0546ade4e75c1df05",
            "connectivity_type": "public",
            "id": "nat-025ec6a7b1228a67e",
            "network_interface_id": "eni-0270e1fab08d9ec9d",
            "private_ip": "10.0.0.55",
            "public_ip": "13.112.153.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-086d9b680119341fa",
            "tags": {
              "Name": "konnichiwa-nat-gw-1"
            },
            "tags_all": {
              "Name": "konnichiwa-nat-gw-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da11ebf64e9b316f",
            "association_id": "eipassoc-0c208c96c5c98f058",
            "connectivity_type": "public",
            "id": "nat-0019df10b748623e8",
            "network_interface_id": "eni-01dadb3a205feba53",
            "private_ip": "10.0.1.245",
            "public_ip": "3.113.103.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0abf666fe281b3336",
            "tags": {
              "Name": "konnichiwa-nat-gw-2"
            },
            "tags_all": {
              "Name": "konnichiwa-nat-gw-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:route-table/rtb-053f24e841db88033",
            "id": "rtb-053f24e841db88033",
            "owner_id": "565106043526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025ec6a7b1228a67e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konnichiwa-private-rt-1"
            },
            "tags_all": {
              "Name": "konnichiwa-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:route-table/rtb-038839d58c43775f7",
            "id": "rtb-038839d58c43775f7",
            "owner_id": "565106043526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0019df10b748623e8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konnichiwa-private-rt-2"
            },
            "tags_all": {
              "Name": "konnichiwa-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:route-table/rtb-0052a42b6639b0a54",
            "id": "rtb-0052a42b6639b0a54",
            "owner_id": "565106043526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed569aab29ce837a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konnichiwa-public-rt"
            },
            "tags_all": {
              "Name": "konnichiwa-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d80dbe2747d86fe",
            "route_table_id": "rtb-053f24e841db88033",
            "subnet_id": "subnet-0c868c9e8509b5e2a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca214fde07334d59",
            "route_table_id": "rtb-038839d58c43775f7",
            "subnet_id": "subnet-0d61b18d197d3d8cd"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc8182894a55076f",
            "route_table_id": "rtb-0052a42b6639b0a54",
            "subnet_id": "subnet-086d9b680119341fa"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04185a465530f7453",
            "route_table_id": "rtb-0052a42b6639b0a54",
            "subnet_id": "subnet-0abf666fe281b3336"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:security-group/sg-0263f436182535c00",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0263f436182535c00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konnichiwa-alb",
            "name_prefix": "",
            "owner_id": "565106043526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konnichiwa-alb-sg"
            },
            "tags_all": {
              "Name": "konnichiwa-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:security-group/sg-064797fb5c285c63c",
            "description": "Security group for ECS EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064797fb5c285c63c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0263f436182535c00"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "konnichiwa-ecs-instances",
            "name_prefix": "",
            "owner_id": "565106043526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konnichiwa-ecs-instances"
            },
            "tags_all": {
              "Name": "konnichiwa-ecs-instances"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:security-group/sg-0ad8ed44c5350f4e7",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad8ed44c5350f4e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0263f436182535c00"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konnichiwa-ecs-tasks",
            "name_prefix": "",
            "owner_id": "565106043526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konnichiwa-ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "konnichiwa-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:subnet/subnet-0c868c9e8509b5e2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c868c9e8509b5e2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565106043526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konnichiwa-private-subnet-1"
            },
            "tags_all": {
              "Name": "konnichiwa-private-subnet-1"
            },
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:subnet/subnet-0d61b18d197d3d8cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d61b18d197d3d8cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565106043526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konnichiwa-private-subnet-2"
            },
            "tags_all": {
              "Name": "konnichiwa-private-subnet-2"
            },
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:subnet/subnet-086d9b680119341fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086d9b680119341fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565106043526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konnichiwa-public-subnet-1"
            },
            "tags_all": {
              "Name": "konnichiwa-public-subnet-1"
            },
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:subnet/subnet-0abf666fe281b3336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abf666fe281b3336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565106043526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konnichiwa-public-subnet-2"
            },
            "tags_all": {
              "Name": "konnichiwa-public-subnet-2"
            },
            "vpc_id": "vpc-0b8ce645f2f86e0ce"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565106043526:vpc/vpc-0b8ce645f2f86e0ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bc10a506683361dc",
            "default_route_table_id": "rtb-08dc2ee5318881123",
            "default_security_group_id": "sg-02e9945316abd752f",
            "dhcp_options_id": "dopt-002983466f0f3060a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8ce645f2f86e0ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08dc2ee5318881123",
            "owner_id": "565106043526",
            "tags": {
              "Name": "konnichiwa-vpc"
            },
            "tags_all": {
              "Name": "konnichiwa-vpc"
            }
          }
        }
      ]
    }
  ]
}